[OPENJPA-2940][WIP] Updating project to JDK17
* Replacing string number constructors
* Removing dangling SecurityContext references