@@ -366,7 +366,7 @@ public class XMLFileHandler {
                 // create an ObjectData that will contain the information
                 // for this instance, and set the version
                 _object = new ObjectData(oid, meta);
-                _object.setVersion(new Long(attrs.getValue("version")));
+                _object.setVersion(Long.valueOf(attrs.getValue("version")));
             }
             else if ("field".equals(qName)) { // field
                 // start parsing a field element: for container types,
@@ -476,7 +476,7 @@ public class XMLFileHandler {
 
                 case JavaTypes.BYTE:
                 case JavaTypes.BYTE_OBJ:
-                    return new Byte(str);
+                    return Byte.parseByte(str);
 
                 case JavaTypes.CHAR:
                 case JavaTypes.CHAR_OBJ:
@@ -488,23 +488,23 @@ public class XMLFileHandler {
 
                 case JavaTypes.DOUBLE:
                 case JavaTypes.DOUBLE_OBJ:
-                    return new Double(str);
+                    return Double.valueOf(str);
 
                 case JavaTypes.FLOAT:
                 case JavaTypes.FLOAT_OBJ:
-                    return new Float(str);
+                    return Float.valueOf(str);
 
                 case JavaTypes.INT:
                 case JavaTypes.INT_OBJ:
-                    return new Integer(str);
+                    return Integer.valueOf(str);
 
                 case JavaTypes.LONG:
                 case JavaTypes.LONG_OBJ:
-                    return new Long(str);
+                    return Long.valueOf(str);
 
                 case JavaTypes.SHORT:
                 case JavaTypes.SHORT_OBJ:
-                    return new Short(str);
+                    return Short.valueOf(str);
 
                 case JavaTypes.NUMBER:
                 case JavaTypes.BIGDECIMAL:
